--- a/FRONTEND/vercel.json
+++ b/FRONTEND/vercel.json
@@ -1,18 +1,5 @@
 {
-  "installCommand": "npm install  --legacy-peer-deps",
-  "version": 2,
-  "builds": [
-    {
-      "src": "index.js",
-      "use": "@vercel/node"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "/api/$1.js"
-    }
-  ],
+  "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }],
   "headers": [
     {
       "source": "/(.*)",
